2007-07-15  James Housley <jim@thehousleys.net>
	* Add libssh2_sftp_readdir_ex(), this function if passed the
	extra parameters will be used to store the full directory
	entry as provided by the server.  Updated LIBSSH2_APINO to
	200706151200 for this change.

2007-07-12  James Housley <jim@thehousleys.net>

	* libssh2_publickey_shutdown(), libssh2_session_free() changed
	to return an "int" to allow signaling of LIBSSH2_ERROR_EAGAIN.

	* libssh2_scp_recv(), libssh2_scp_send_ex() and libssh2_sftp_init()
	will loop in on libssh2_channel_free() when there is an error.
	It is not possible to return LIBSSH2_ERROR_EAGAIN in this condition
	in these 3 functions and not lose the original error code.

2007-06-10  James Housley <jim@thehousleys.net>

	* The list of supported authentication types returned by
	libssh2_userauth_list() is an internal buffer and is managed
	by the library and should not be free()'d by the user.

2007-06-08  James Housley <jim@thehousleys.net>

	* Convert all the code to properly work with a socket in
	non-blocking mode.  All functions either return 
	LIBSSH2_ERROR_EAGAIN or return NULL and set the error code
	to be LIBSSH2_ERROR_EAGAIN instead of blocking, when in
	non-blocking mode.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* NEWS: Add.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* NEWS: Add.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* NEWS: Add -lsocket/-lnsl.  End sentences with '.'.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* NEWS: Add.  Start sentences with uppercase.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* configure.in: Use AC_SEARCH_LIBS on socket() for -lsocket, so we
	don't link with -lsocket unless it is necessary.  Remove
	SHLIB_LDFLAGS, it was never used by anything.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* configure.in: Fix typo.

2007-03-27  Simon Josefsson <simon@josefsson.org>

	* src/session.c: